--- a/templates/restic.cron.j2
+++ b/templates/restic.cron.j2
@@ -21,6 +21,12 @@ PATH=/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin:{{ restic_inst
 {{ item.check_time | default('17 4 * * *') }} {{ restic_user }} restic-{{ item.name }} check{% if restic_discard_cron_stdout %} > /dev/null{% endif %}
 {%- endif %}
 
+{% if restic_prometheus_exporter | default(false) -%}
+# Dump stats for Prometheus
+{{ restic_prometheus_time | default('0 0 * * *') }} {{ restic_user }} restic-{{ item.name }}-exporter{% if restic_discard_cron_stdout %} > /dev/null{% endif %}
+
+{% endif -%}
+
 # Do an actual backup
 {% for job in item.jobs %}
 {{ job.at }} {{ restic_user }} {{ job.command }}{% if restic_discard_cron_stdout %} > /dev/null{% endif %}
