fix: potential problem when having spaces in the job name.
This fix allows for having spaces in the jobs names, they are going to
be replaced with hyphens when translated into file names or for the
wrapper commands.

--- a/templates/restic-wrapper.sh.j2
+++ b/templates/restic-wrapper.sh.j2
@@ -2,7 +2,7 @@
 # {{ ansible_managed }}
 
 export RESTIC_REPOSITORY={{ item.url | trim | quote }}
-export RESTIC_PASSWORD_FILE={{ restic_password_file_path }}/.restic-{{ item.name | trim | quote }} 
+export RESTIC_PASSWORD_FILE={{ restic_password_file_path }}/.restic-{{ item.name | trim | replace(' ', '-') }} 
 {% if item.remote_credentials is defined %}
 {% for k,v in item.remote_credentials.items() %}
 export {{ k | upper }}={{ v | trim | quote }}
